fixed sutton mobile hero slider

--- a/src/styles/components/hero-slider.less
+++ b/src/styles/components/hero-slider.less
@@ -211,20 +211,34 @@ hero-slider {
     .slider-content{
       .hero-slide {
         .content-inner {
+          background-color: rgba(0, 0, 0, 0.8);
           top: 50%;
+          width: 95%;
+          margin: 0px;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
+          padding: 5px 0;
           h1, h2 {
             padding-left: 10px;
             font-size: 12px;
-            font-size: 12px;
-            line-height: 18px;
+            line-height: 16px;
             padding: 5px 10px;
             width: 90%;
+            background: none;
+            position: relative;
+            top: 0;
             span{
               padding: 0;
             }
           }
           h1{
+            font-size: 14px;
+            line-height: 21px;
             font-weight: 700;
+            padding-bottom: 0;
+          }
+          h2{
+            text-transform: none;
           }
 
         }
